--- a/flaskapp/templates/report-visitors.html
+++ b/flaskapp/templates/report-visitors.html
@@ -20,6 +20,7 @@
                         <div class="btn-group-vertical p-2">
                             <button type="button" data-toggle="modal" data-target="#datewisemodal"  class="btn btn-secondary mb-2"> Date Wise Report</button>
                             <button data-toggle="modal" data-target="#departmentwisemodal" class="btn btn-secondary "> Department Wise Report</button>
+                            <button data-toggle="modal" data-target="#personwisemodal" class="btn btn-secondary mt-2 "> Person Wise Report</button>
                         </div>
                     </div>
     </div>
@@ -71,6 +72,28 @@
                 </div>
             </div>
         </div>
+
+        <div class="modal fade" id="personwisemodal" tabindex="-1" role="dialog" aria-labelledby="personwisemodal" aria-hidden="true">
+                <div class="modal-dialog" role="form">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title"> Date Wise Report </h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        </div>
+                        <div class="modal-body">
+                                <form class="form-row" action="{{url_for('report.report_print')}}" method="POST">
+                                <input type="hidden" name="printid" value="8">
+                                <label class=" mb-2 h6 col-form-label" for="#date">Select Date : </label>
+                                <input id="date" type="date" class="form-control" name="date" autofocus>
+                                
+                                <input type="submit"  class="mt-2 btn btn-primary btn-block btn-sm" value="Print">
+                                  
+                            </form>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
     <div class="col">
             <div id="allvisitor"  class="card" >
                     <div class="card-header text-center">
@@ -96,6 +119,7 @@
                                     <th>In Time</th>
                                     <th>Out Time</th>
                                     <th>Total Duration</th>
+                                    <th>Actions</th>
             
                                 </tr>
                             </thead>
@@ -110,18 +134,31 @@
                                     {% if vi.active.visited_dept.department_name == None %}
                                     <td>None</td>
                                     {% else %}
-                                    <td>{{vi.active.visited_employee.employee_name}} </td>
+                                    <td>{{vi.active.visited_employee.employee_name}}</td>
                                     {% endif %}
 
                                     {% if vi.active.visited_dept.department_name == None %}
-                                    <td>None</td>
+                                    <td></td>
                                     {% else %}
                                     <td>{{vi.active.visited_dept.department_name}}</td>
                                     {% endif %}
+                                    
                                     <td>{{vi.active.visiting_purpose}}</td>
                                     <td>{{vi.in_time}}</td>
                                     <td>{{vi.out_time}}</td>
                                     <td>{{vi.duration}}</td>
+                                    <td><button id="visitor-delete" type="button" value="Actions" class="btn btn-sm btn-warning" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Actions</button>
+                                        <div class="dropdown-menu" aria-labelledby="visitor-delete">
+                                               <div>
+                                                    <form action="{{url_for('dataentry.visitors_delete')}}" method="POST">
+                                                            <input type="hidden" name="vi_id" value="{{vi.id}}">
+                                                            <input class="dropdown-item" type="submit" value="Delete">
+                                                               
+                                                    </form>
+
+                                               </div>
+                                               
+                                        </div>  </td>
                                 </tr>
                                 {% endfor %}
                             </tbody>
