--- a/flaskapp/templates/report-vehicles.html
+++ b/flaskapp/templates/report-vehicles.html
@@ -78,7 +78,7 @@ Outside Vehicles Report
                                 <td>{{v.OutTime}} </td>
                                 <td> {{v.TotalDuration}}</td>
                                 <td>
-                                    <button data-id="{{v.VeID}}" type="button" data-toggle="modal" data-target="#updatemodal">Update</button>         
+                                    <button class="btn btn-warning btn-sm" data-id="{{v.VeID}}" type="button" data-toggle="modal" data-target="#updatemodal">Update</button>         
                                 </td>
                             </tr>
                             {% endfor %}
