Vehicle print Format

--- a/flaskapp/templates/report-vehicles-print.html
+++ b/flaskapp/templates/report-vehicles-print.html
@@ -63,16 +63,17 @@
     </head>
     <body>
         <div class="container-fulid">
-                <p class="text-left"><strong> Date: {{date.strftime('%d-%m-%Y')}}</strong></p>    
-                <div class="card">
-                        <div class="card-header text-center">
-                            <h3>Siddhi Vinayak Knots and Prints Pvt. Ltd.</h3>
-                            <p class="text-muted">A-26 To A-32, "Central Park", G.I.D.C Pandesra, SURAT-394221.
+                
+                <div class="">
+                        <div class=" text-center mb-n3">
+                            <h3 class="h4">Siddhi Vinayak Knots and Prints Pvt. Ltd.</h3>
+                            <p class="text-muted ">A-26 To A-32, "Central Park", G.I.D.C Pandesra, SURAT-394221.
                                 </p>
                                 <h5 class="text-black">{{title}}</h5>
                             
                         </div>
-                        <div class="card-body">
+                        <p class="text-left"><strong> Date: {{date.strftime('%d-%m-%Y')}}</strong></p>    
+                        <div class="">
                            {% if title == 'Outside Vehicle Records' %}
                             <table class="table table-sm table-bordered">
                                 <thead >
